# costrict-skills-repo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh
ai-resource-eval/: CHANGELOG.md  pyproject.toml
ai-resource-eval/ai_resource_eval/: __init__.py  __main__.py  cli.py  runner.py
ai-resource-eval/ai_resource_eval/api/: judge.py  metric.py  registry.py  types.py
ai-resource-eval/ai_resource_eval/cache/: __init__.py  sqlite_cache.py
ai-resource-eval/ai_resource_eval/fetcher/: __init__.py  github.py  interactive.py  plugin.py  repomix.py  web.py
ai-resource-eval/ai_resource_eval/judges/: base.py  deepseek.py  openai_compat.py
ai-resource-eval/ai_resource_eval/metrics/: __init__.py  coding_relevance.py  desc_accuracy.py  doc_completeness.py  install_clarity.py  prompt_builder.py  security_scan_prompt.py  specificity.py  writing_quality.py
ai-resource-eval/ai_resource_eval/scoring/: decision.py  governor.py  star_router.py
ai-resource-eval/ai_resource_eval/tasks/: loader.py  mcp_server.yaml  plugin.yaml  prompt.yaml  rule.yaml  security_scan.yaml  skill.yaml
ai-resource-eval/tests/: test_cache.py  test_cli.py  test_github_fetcher.py  test_governor.py  test_install_popularity.py  test_judge.py  test_metrics.py  test_plugin_content_fetcher.py  test_registry.py  test_runner.py  test_runner_plugin_routing.py  test_security_cache.py  test_security_task.py  test_star_router.py  test_task_config.py  test_types.py
ai-resource-eval/tests/fixtures/: catalog_sample.json  catalog_sample_v2.json
catalog/: featured.md  (+7 more)
(+239 files in other folders)
