[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-resource-eval"
version = "0.1.0"
description = "LLM-as-judge evaluation harness for AI coding resources (MCP servers, skills, rules, prompts)"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "papysans" }]
keywords = ["llm", "evaluation", "mcp", "skills", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "questionary>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
ai-resource-eval = "ai_resource_eval.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
